[gd_scene load_steps=2 format=3 uid="uid://dfxipxvjnascj"]

[ext_resource type="Script" uid="uid://bst7s0j8yo1vg" path="res://src/Scripts/LevelSelection.gd" id="1_x7vxi"]

[node name="LevelSelection" type="Node2D"]
script = ExtResource("1_x7vxi")

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(1920, 1080)
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(400, 500)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(400, 600)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 35
text = "
Select your next challenge
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_trim_flags = 64

[node name="ButtonLevelOne" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/outline_size = 2
theme_override_constants/h_separation = 15
theme_override_font_sizes/font_size = 25
text = "LEVEL 1
"

[node name="ButtonLevelTwo" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "LEVEL 2"

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Select your weapons!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="LeftHandButton" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
alignment = 1
allow_reselect = true

[node name="RightHandButton" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
alignment = 1
allow_reselect = true

[node name="ButtonBack" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "BACK
"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ButtonLevelOne" to="." method="_on_button_level_one_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ButtonLevelTwo" to="." method="_on_button_level_two_pressed"]
[connection signal="item_selected" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftHandButton" to="." method="_on_left_hand_button_item_selected"]
[connection signal="item_selected" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/RightHandButton" to="." method="_on_right_hand_button_item_selected"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ButtonBack" to="." method="_on_button_back_pressed"]
